@@ -9,6 +9,9 @@
  * Add ``exist_ok`` parameter to ``add_worktree`` to allow creation with
    existing directories. (Jelmer Vernooĳ)
 
+ * Add colorized diff support for the ``show`` command with ``--color``
+   argument. (Jelmer Vernooĳ, #1741)
+
 0.24.1	2025-08-01
 
  * Require ``typing_extensions`` on Python 3.10.
